--- a/table.html
+++ b/table.html
@@ -214,6 +214,213 @@
             </td>
            </tr>
 
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
+           <tr>
+            <th>
+             <input type="checkbox">
+            </th>
+
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@defaultadmin defaultadmin defaultadmin</td>
+            <td>28 /12/ 2020</td>
+            <td>28 /12/ 2020</td>
+            <td>info@vinventa.com</td>
+            <td>090078601</td>
+            <td>Admin</td>
+            <td>Active</td>
+            <td>Super Admin</td>
+            <td class="td-center">
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+             <a href="#"><img src="images/lock.png"></a>
+
+            </td>
+           </tr>
+
 
 
 
