--- a/user-profile.html
+++ b/user-profile.html
@@ -521,52 +521,33 @@
                                   </div>
                                 
                                 <div class="form-group">
-                                    <label>Current Password</label>
-                                    <input type="password" class="form-control" placeholder="">
-                                  </div>
-                                <div class="form-group relative">
-                                    <label>New Password</label>
-                                    <input id="input_defaultSortingOrder" type="password" class="form-control" placeholder="">
-                                    <div class="eyes-icon-password">
-                                      <input type="checkbox" name="show_password" id="showpassord">
-                                      <label for="showpassord" class="show-password-icon">&nbsp;</label>
-                                    </div>
-                                  </div>
-                                  <div class="form-group">
-                                    <label>Confirm New Password</label>
-                                    <input type="password" class="form-control" placeholder="">
-                                  </div>
-
-                                  
-
-                                <div class="form-group">
                                     <label>First Name</label>
-                                    <input type="text" class="form-control" placeholder="John">
+                                    <input id="input_firstName" type="text" class="form-control" placeholder="John">
                                   </div>
                                   <div class="form-group">
                                     <label>Last Name</label>
-                                    <input type="text" class="form-control" placeholder="Doe">
+                                    <input id="input_lastName" type="text" class="form-control" placeholder="Doe">
                                   </div>
                                   <div class="form-group">
                                     <label>Email Address</label>
-                                    <input type="text" class="form-control" placeholder="joh_doe123@vinventa.com ">
+                                    <input id="input_emailAddress" type="text" class="form-control" placeholder="joh_doe123@vinventa.com ">
                                   </div>
                                   <div class="form-group">
                                     <label>Office</label>
-                                    <input type="text" class="form-control" placeholder="Newyork, USA">
+                                    <input id="input_office" type="text" class="form-control" placeholder="Newyork, USA">
                                   </div>
                                   <div class="form-group">
                                     <label>Job Title</label>
-                                    <input type="text" class="form-control" placeholder="Senior System Manager">
+                                    <input id="input_jobTitle" type="text" class="form-control" placeholder="Senior System Manager">
                                   </div>
                                   <div class="form-group">
                                     <label>Phone</label>
-                                    <input type="text" class="form-control" placeholder="(+98) 9123728154">
+                                    <input id="inpit_phone" type="text" class="form-control" placeholder="(+98) 9123728154">
                                   </div>
 
                                   <div class="search-section-buttons text-right mt-4">
-                                    <button type="button" class="cancel-btn">Cancel</button>
-                                    <button type="button" class="theme-btn graydient-primary-btn">Update</button>
+                                    <button id="btn_cancel" type="button" class="cancel-btn">Cancel</button>
+                                    <button id="btn_update" type="button" class="theme-btn graydient-primary-btn">Update</button>
                                   </div>
                             </div>
 
@@ -588,23 +569,23 @@
 
                                 <div class="form-group">
                                     <label>Current Password</label>
-                                    <input type="password" class="form-control" placeholder="">
+                                    <input id="input_currentPassword" type="password" class="form-control" placeholder="">
                                   </div>
                                 <div class="form-group relative">
                                     <label>New Password</label>
-                                    <input id="input_defaultSortingOrder" type="password" class="form-control" placeholder="">
+                                    <input id="input_newPassword" type="password" class="form-control" placeholder="">
                                     <div class="eyes-icon-password">
-                                      <input type="checkbox" name="show_password" id="showpassord">
+                                      <input type="checkbox" name="show_password" id="chk_showPassword">
                                       <label for="showpassord" class="show-password-icon">&nbsp;</label>
                                     </div>
                                   </div>
                                   <div class="form-group">
                                     <label>Confirm New Password</label>
-                                    <input type="password" class="form-control" placeholder="">
+                                    <input type="password" id="input_confirmPassword" class="form-control" placeholder="">
                                   </div>
                                   <div class="search-section-buttons text-right mt-4">
-                                    <button type="button" class="cancel-btn">Cancel</button>
-                                    <button type="button" class="theme-btn graydient-primary-btn">Change Password</button>
+                                    <button id="btn_cancel" type="button" class="cancel-btn">Cancel</button>
+                                    <button id="btn_changePassword" type="button" class="theme-btn graydient-primary-btn">Change Password</button>
                                   </div>
                             </div>
 
