--- a/policy-center-new-design.html
+++ b/policy-center-new-design.html
@@ -313,14 +313,14 @@
                   </div>
                 </div>
                 <div class="sliding-section asset-details-page-wrapper system-settings-wrapper">
-                  <div class="sliding-left-section">
+                  <div class="sliding-left-section ">
                     <a href="javascript:" class="slide-btn"
                       ><img
                         src="images/silde-icon.png"
                         class="scren-slide-icon"
                     /></a>
                     <div
-                      class="nav flex-column nav-pills device-filterleft-bar"
+                      class="nav flex-column nav-pills device-filterleft-bar ml-1"
                       id="v-pills-tab"
                       role="tablist"
                       aria-orientation="vertical"
@@ -568,7 +568,7 @@
                                   
                                 <div class="dashboard-top-section-query new-search-bar-wrapper mt-0">
                                     
-                                    <div class="search-wrap-standard search-inverse mr-3"><input  type="text" placeholder="Search Action Library" class="search-field"></div>
+                                    <div class="search-wrap-standard search-inverse mr-3"><input  type="text" placeholder="Search " class="search-field"></div>
                                     <div class="search-right-bar sarch-right-bar-border">
                                         <select class="custom-checkbox">
                                             <option>Filter by</option>
@@ -607,7 +607,7 @@
                                 </div>
 
                                  <div class="device-result-export-row device-result-export-row-standard">
-                                    <div class="device-results">
+                                    <div class="device-results mt-3">
                                         Policy Sets (1)
                                     </div>
 
@@ -639,8 +639,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                                <a href="#"><img src="images/edit.svg"></a>
+                                                <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
@@ -655,8 +655,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                              <a href="#"><img src="images/edit.svg"></a>
+                                              <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
@@ -671,8 +671,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                              <a href="#"><img src="images/edit.svg"></a>
+                                              <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
@@ -687,8 +687,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                              <a href="#"><img src="images/edit.svg"></a>
+                                              <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
@@ -703,8 +703,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                              <a href="#"><img src="images/edit.svg"></a>
+                                              <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
@@ -719,8 +719,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                              <a href="#"><img src="images/edit.svg"></a>
+                                              <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
@@ -735,8 +735,8 @@
                                             <td>&nbsp;</td>
                                             <td>admininventa</td>
                                             <td class="td-center">
-                                                <a href="#"><img src="images/lock.png"></a>
-                                                <a href="#"><img src="images/lock.png"></a>
+                                              <a href="#"><img src="images/edit.svg"></a>
+                                              <a href="#"><img src="images/delete.svg"></a>
                                             </td>
                                         </tr>
 
