--- a/query-wiard-expressions-model-new.html
+++ b/query-wiard-expressions-model-new.html
@@ -664,7 +664,7 @@
           </div>
 
 
-          <!-- Fahad k leye jogar-->
+          <!-- sub row inter here -->
           <div class="query-wizard-expension flex-sub-framework-box" style="z-index: 4;">
            <div class="add-fields-wrappter flex-sub-row-container">
             <ul class="list-ic horizontal">
@@ -720,10 +720,10 @@
            <div>
             <div class="close-actions">
              <a href="#" style="text-decoration: none;">
-              <img src="images/icon_plus-circle.svg" width="20px" />
+              <img src="images/icon_plus-circle.svg" width="25px" />
              </a>
              <a href="#" style="text-decoration: none;">
-              <img src="images/icon_delete-circle.svg" width="20px" />
+              <img src="images/icon_delete-circle.svg" width="25px" />
              </a>
             </div>
            </div>
@@ -967,7 +967,7 @@
 
              
 
-              <!-- Fahad k leye jogar-->
+              <!-- sub row inter here-->
           <div class="query-wizard-expension flex-sub-framework-box" style="z-index: 4;">
             <div class="add-fields-wrappter flex-sub-row-container">
              <ul class="list-ic horizontal">
@@ -1023,10 +1023,10 @@
             <div>
              <div class="close-actions">
               <a href="#" style="text-decoration: none;">
-               <img src="images/icon_plus-circle.svg" width="20px" />
+               <img src="images/icon_plus-circle.svg" width="25px" />
               </a>
               <a href="#" style="text-decoration: none;">
-               <img src="images/icon_delete-circle.svg" width="20px" />
+               <img src="images/icon_delete-circle.svg" width="25px" />
               </a>
              </div>
             </div>
@@ -1051,7 +1051,7 @@
              </div>
             </div>
  
-             <!-- Fahad k leye jogar-->
+             <!-- sub row inter here -->
              <div class="query-wizard-expension flex-sub-framework-box" style="z-index: 4;">
                <div class="add-fields-wrappter flex-sub-row-container">
                 <ul class="list-ic horizontal">
@@ -1107,10 +1107,10 @@
                <div>
                 <div class="close-actions">
                  <a href="#" style="text-decoration: none;">
-                  <img src="images/icon_plus-circle.svg" width="20px" />
+                  <img src="images/icon_plus-circle.svg" width="25px" />
                  </a>
                  <a href="#" style="text-decoration: none;">
-                  <img src="images/icon_delete-circle.svg" width="20px" />
+                  <img src="images/icon_delete-circle.svg" width="25px" />
                  </a>
                 </div>
                </div>
