--- a/gui-new.html
+++ b/gui-new.html
@@ -1335,12 +1335,12 @@
                                                                                             </a>
                                                                                         </div>
                                                                                     </div>
-                                                                                    <div class="mt-4 box-btn">
+                                                                                    <!-- <div class="mt-4 box-btn">
                                                                                         <button type="button"
                                                                                             class="theme-btn graydient-primary-btn">
                                                                                             Apply
                                                                                         </button>
-                                                                                    </div>
+                                                                                    </div> -->
                                                                                 </div>
                                                                             </div>
                                                                         </div>
