--- a/gui-new.html
+++ b/gui-new.html
@@ -1031,8 +1031,23 @@
                                                                                                             </div> -->
                                                                                             <div
                                                                                                 class="dropdwon-contents-bottom">
-                                                                                                <!-- <a class="select-all-btn">Select all</a> -->
-                                                                                                <ul class="dropdown-connectors-list mCustomScrollbar"
+
+                                                                                                <div
+                                                                                                    class=" border-bottom pb-2 mt-2 d-flex align-items-center justify-content-start">
+                                                                                                    <span
+                                                                                                        class="w-auto mr-2">
+                                                                                                        <input
+                                                                                                            type="checkbox" />
+                                                                                                    </span>
+                                                                                                    <span>Select
+                                                                                                        all
+                                                                                                    </span>
+                                                                                                </div>
+                                                                                                <!-- <a
+                                                                                                    class="select-all-btn">Select
+                                                                                                    all</a> -->
+                                                                                                <ul style="height: 221px;"
+                                                                                                    class="dropdown-connectors-list mCustomScrollbar"
                                                                                                     data-mcs-theme="minimal-dark">
                                                                                                     <li>
                                                                                                         <div class="">
